--- a/ft_irc/Makefile
+++ b/ft_irc/Makefile
@@ -19,9 +19,9 @@ INC_DIR		:=	./inc
 HEADERS		:=	$(INC_DIR)/Client.hpp				\
 							$(INC_DIR)/Server.hpp				\
 							$(INC_DIR)/Command.hpp			\
-							$(INC_DIR)/Signals.hpp			
+							$(INC_DIR)/Signals.hpp			\
+							$(INC_DIR)/Channel.hpp			\
 
-							#$(INC_DIR)/Channel.hpp			\
 							#$(INC_DIR)/Client.hpp			\
 							#$(INC_DIR)/Command.hpp
 
@@ -33,9 +33,9 @@ SRC				:=	$(SRC_DIR)/main.cpp					\
 							$(SRC_DIR)/Client.cpp				\
 							$(SRC_DIR)/Server.cpp				\
 							$(SRC_DIR)/Command.cpp				\
-							$(SRC_DIR)/Signals.cpp
-
+							$(SRC_DIR)/Signals.cpp          \
 							#$(SRC_DIR)/Channel.cpp			\
+
 							#$(SRC_DIR)/Clientl.cpp			\
 							#$(SRC_DIR)/Command.cpp			
 
