--- a/ft_irc/Makefile
+++ b/ft_irc/Makefile
@@ -33,14 +33,12 @@ OBJ_DIR		:=	./obj
 # ---------------------------------------------------------------------------- #
 SRC				:=	$(SRC_DIR)/main.cpp					\
 							$(SRC_DIR)/Server.cpp		\
+							$(SRC_DIR)/server_utils.cpp	\
+							$(SRC_DIR)/server_auth.cpp	\
+							$(SRC_DIR)/server_cmds.cpp	\
 							$(SRC_DIR)/Client.cpp		\
 							$(SRC_DIR)/Command.cpp		\
-							$(SRC_DIR)/Signals.cpp       \
-							#$(SRC_DIR)/Channel.cpp			
-
-
-							#$(SRC_DIR)/Clientl.cpp			\
-							#$(SRC_DIR)/Command.cpp			
+							$(SRC_DIR)/Signals.cpp		\
 
 # ---------------------------------------------------------------------------- #
 OBJ				:=	$(patsubst $(SRC_DIR)/%.cpp, $(OBJ_DIR)/%.o, $(SRC))
